@@ -64,7 +64,7 @@ PKG_CHECK_MODULES(GLIB, glib-2.0 >= 2.4.0)
 AC_SUBST(GLIB_CFLAGS)
 AC_SUBST(GLIB_LIBS)
 
-PKG_CHECK_MODULES(TICONV, ticonv >= 0.0.3)
+PKG_CHECK_MODULES(TICONV, ticonv >= 0.0.5)
 AC_SUBST(TICONV_CFLAGS)
 AC_SUBST(TICONV_LIBS)
 
