@@ -9,6 +9,10 @@ To do:
 
 Log:
 
+- 12/07/2006, version 0.2.2: roms
+	- variables like 'beta' can't be handled by TiGroup file nor ZIP archives.
+	Translate filenames again!
+
 - 06/07/2006, version 0.2.1: roms
 	- bug #1499672: every edit-locked BASIC and AMS program is marked ASM
 	and received as *.8xz, of course this has to be *.8xp for both locked 
@@ -19,6 +23,9 @@ Log:
 		library.
 	- reverted back again
 	- replaced fopen by gfopen in ZIP I/O callbacks (locale/utf8)
+
+14) variables like 'beta' can't be handled by TiGroup file nor ZIP archives. We may
+	need translation...
 
 - 17/06/2006, version 0.2.0: roms
 	- full TiGroup support (both regular & flash with deflate compression)
